--- a/hota-qr/css/style.css
+++ b/hota-qr/css/style.css
@@ -18,6 +18,7 @@ video
     position:absolute;
     width:100%; height:100%;
     -webkit-transform:translate3d(0,0,0);
+    overflow: hidden;
    
 }
 .inner {
